grammar.js
/// <reference types="tree-sitter-cli/dsl" />
// @ts-check

module.exports = grammar({
  name: 'kivy',

  extras: $ => [/[ \t]/],

  externals: $ => [
    $._newline,
    $._indent,
    $._dedent,
    $._break,
    $._directive_start,
  ],

  rules: {
    source_file: $ => seq(
      repeat(choice(
        $._directive,
        seq(optional($._break), $._rule),
      )),
      optional($._break),
    ),

    _directive: $ => choice(
      $.import_directive,
      $.set_directive,
      $.kivy_directive,
    ),

    import_directive: $ => seq(
      $._directive_start,
      'import',
      field('alias', $.identifier),
      field('module', $.directive_value),
      $._newline,
    ),

    set_directive: $ => seq(
      $._directive_start,
      'set',
      field('name', $.identifier),
      field('value', $.directive_value),
      $._newline,
    ),

    kivy_directive: $ => seq(
      $._directive_start,
      'kivy',
      field('version', $.directive_value),
      $._newline,
    ),

    directive_value: $ => token.immediate(/[^\n\r]+/),

    _rule: $ => choice($.root_rule, $.class_rule),

    root_rule: $ => seq(
      field('name', $.identifier),
      ':',
      optional($._rule_body),
    ),

    class_rule: $ => seq(
      '<',
      field('name', optional($.identifier)),
      optional(seq('@', field('base', $.identifier),
        repeat(seq('+', field('base', $.identifier))))),
      '>',
      ':',
      optional($._rule_body),
    ),

    _rule_body: $ => choice(
      $._newline,
      seq($._indent, repeat($._declaration), $._dedent),
    ),

    _canvas_header: $ => choice('canvas.before', 'canvas.after', 'canvas'),

    canvas_block: $ => seq(
      field('name', $._canvas_header),
      ':',
      choice(
        $._newline,
        seq($._indent, repeat(choice($._declaration, $._canvas_atom)), $._dedent),
      ),
    ),

    _canvas_atom: $ => seq(
      choice('Clear', 'PushMatrix', 'PopMatrix'),
      $._newline,
    ),

    _declaration: $ => choice(
      $.canvas_block,
      $.widget_declaration,
      $.event_binding,
      $.id_declaration,
      $.property,
    ),

    widget_declaration: $ => seq(
      field('name', $.identifier),
      ':',
      choice($._newline, seq($._indent, repeat($._declaration), $._dedent), $._dedent),
    ),

    property: $ => seq(
      field('name', $.identifier),
      ':',
      field('value', $.property_value),
      optional($._newline),
    ),

    event_binding: $ => seq(
      'on',
      '_',
      field('event', $.identifier),
      ':',
      field('handler', $.property_value),
      optional($._newline),
    ),

    id_declaration: $ => seq(
      'id',
      ':',
      field('name', choice($.identifier, $.string)),
      optional($._newline),
    ),

    property_value: $ => token.immediate(/[^\n\r]+/),

    identifier: $ => /[a-zA-Z_]\w*/,

    string: $ => choice(
      /'[^']*'/,
      /"[^"]*"/,
    ),
  },
});
