test/corpus/core-syntax.txt
==================
Empty file
==================

---

(source_file)

==================
Comment-only file
==================

# just a comment

---

(source_file)

==================
Root rule
==================

BoxLayout:

---

(source_file
  (root_rule
    name: (identifier)))

==================
Class rule
==================

<MyButton>:

---

(source_file
  (class_rule
    name: (identifier)))

==================
Root rule missing colon — ERROR
==================

BoxLayout

---

(source_file
  (ERROR
    (identifier)))

==================
Rule body with property
==================

BoxLayout:
    text: "Hello"

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (string)))))

==================
Rule body empty — header only
==================

BoxLayout:
    

---

(source_file
  (root_rule
    name: (identifier)))

==================
Property — string value
==================

BoxLayout:
    text: "Hello"

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (string)))))

==================
Event binding — on_press
==================

BoxLayout:
    on_press: print("clicked")

---

(source_file
  (root_rule
    name: (identifier)
    (event_binding
      event: (event_name)
      handler: (property_value
        (identifier)))))

==================
Event binding — with underscore in name
==================

BoxLayout:
    on_touch_down: root.handler()

---

(source_file
  (root_rule
    name: (identifier)
    (event_binding
      event: (event_name)
      handler: (property_value
        (dotted_ref)))))

==================
Property starting with on but not binding (no _ after on)
==================

BoxLayout:
    ontarget: 42

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (number)))))

==================
ID declaration — bare name
==================

BoxLayout:
    id: my_button

---

(source_file
  (root_rule
    name: (identifier)
    (id_declaration
      name: (identifier))))

==================
ID declaration — quoted name
==================

BoxLayout:
    id: "my_button"

---

(source_file
  (root_rule
    name: (identifier)
    (id_declaration
      name: (string))))

==================
Missing colon in property — ERROR
==================

BoxLayout:
    text "Hello"

---

(source_file
  (root_rule
    name: (identifier)
    (ERROR
      (identifier))))

==================
Child widget inside parent
==================

BoxLayout:
    Button:

---

(source_file
  (root_rule
    name: (identifier)
    (widget_declaration
      name: (identifier))))

==================
Nested widgets — 2 levels deep
==================

BoxLayout:
    Button:
        Label:

---

(source_file
  (root_rule
    name: (identifier)
    (widget_declaration
      name: (identifier)
      (widget_declaration
        name: (identifier)))))

==================
Comments inside rule body
==================

BoxLayout:
    # a comment here
    text: "hi"

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (string)))))

==================
Blank lines between declarations
==================

BoxLayout:
    text: "a"

    font_size: 14

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (string)))
    (property
      name: (identifier)
      value: (property_value
        (number)))))

==================
Blank lines between top-level rules
==================

<MyButton>:

<MyLabel>:

---

(source_file
  (class_rule
    name: (identifier))
  (class_rule
    name: (identifier)))

==================
Windows \r\n line endings
==================

BoxLayout:
    text: "Hello"

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (string)))))

==================
Mixed indent — 4 then 6 spaces
==================

BoxLayout:
    text: "a"
      font_size: 14

---

(source_file
  (root_rule
    name: (identifier)
    (widget_declaration
      name: (identifier)
      (ERROR
        (string))
      (property
        name: (identifier)
        value: (property_value
          (number))))))

==================
Tab indent — 1 tab = 8 spaces
==================

BoxLayout:
	text: "hi"

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (string)))))

==================
Tabs vs spaces at same level — ERROR
==================

BoxLayout:
	text: "a"
    color: "red"

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (string))))
  (root_rule
    name: (identifier)
    (ERROR)))

==================
Comment at byte 0 — zero rules
==================

# comment at start of file

---

(source_file)

==================
Indentation bounce — 4 then 2 then 4 then 0 — ERROR
==================

BoxLayout:
    text: "a"
  font_size: 14
    color: "red"

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (string))))
  (root_rule
    name: (identifier)
    (ERROR
      (number))
    (property
      name: (identifier)
      value: (property_value
        (string)))))

==================
id: without value — edge case
==================

BoxLayout:
    id:

---

(source_file
  (root_rule
    name: (identifier)
    (id_declaration
      name: (string
        (MISSING "string_token1")))))

==================
Dynamic class rule — single base
==================

<CustomButton@Button>:

---

(source_file
  (class_rule
    name: (identifier)
    base: (identifier)))

==================
Dynamic class rule — multiple bases
==================

<NewWidget@Behavior+Label>:

---

(source_file
  (class_rule
    name: (identifier)
    base: (identifier)
    base: (identifier)))

==================
Dynamic class rule — missing name (ERROR)
==================

<@Button>:

---

(source_file
  (class_rule
    base: (identifier)))

==================
Global rule — no body
==================

<>:

---

(source_file
  (class_rule))

==================
Global rule — with body
==================

<>:
    text: "Hello"

---

(source_file
  (class_rule
    (property
      name: (identifier)
      value: (property_value
        (string)))))

==================
Negated class rule — no body
==================

<-Button>:

---

(source_file
  (class_rule
    negated: (identifier)))

==================
Negated class rule — with body
==================

<-Button>:
    text: "Hello"

---

(source_file
  (class_rule
    negated: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (string)))))

==================
Negated class rule with base — ERROR
==================

<-Name@Base>:

---

(source_file
  (class_rule
    (ERROR
      (identifier))
    base: (identifier)))

==================
Number — integer
==================

BoxLayout:
    font_size: 42

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (number)))))

==================
Number — float
==================

BoxLayout:
    opacity: 0.5

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (number)))))

==================
Number — negative
==================

BoxLayout:
    offset: -3

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (number)))))

==================
Boolean — True and False
==================

BoxLayout:
    disabled: True
    visible: False

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (boolean)))
    (property
      name: (identifier)
      value: (property_value
        (boolean)))))

==================
None keyword
==================

BoxLayout:
    color: None

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value))))

==================
Bare identifier
==================

BoxLayout:
    size_hint: size

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (identifier)))))

==================
Dotted reference — 2 parts
==================

BoxLayout:
    pos: self.pos

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (dotted_ref)))))

==================
Dotted reference — 3 parts
==================

BoxLayout:
    origin: a.b.c

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (dotted_ref)))))

==================
Tuple — empty
==================

BoxLayout:
    nothing: ()

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (tuple)))))

==================
Tuple — single element with trailing comma
==================

BoxLayout:
    single: (42,)

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (tuple
          (number))))))

==================
Tuple — multiple elements
==================

BoxLayout:
    many: (1, 2, 3)

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (tuple
          (number)
          (number)
          (number))))))

==================
Raw value — arithmetic expression
==================

BoxLayout:
    expr: self.parent.width * 0.5

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (dotted_ref)))))

==================
Raw value — function call
==================

BoxLayout:
    action: print("clicked")

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (identifier)))))

==================
List — empty
==================

BoxLayout:
    nothing: []

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (list_value)))))

==================
List — numbers
==================

BoxLayout:
    points: [1, 2, 3]

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (list_value
          (number)
          (number)
          (number))))))

==================
List — mixed types
==================

BoxLayout:
    stuff: [1, 'a', True]

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (list_value
          (number)
          (string)
          (boolean))))))

==================
List — nested inside tuple
==================

BoxLayout:
    data: ([1, 2], 3)

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (tuple
          (list_value
            (number)
            (number))
          (number))))))

==================
List — trailing comma
==================

BoxLayout:
    items: [1, 2,]

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (list_value
          (number)
          (number))))))

==================
#: inside rule body — no crash, consumed as content
==================

BoxLayout:
    #: comment here
    text: "hi"

---

(source_file
  (root_rule
    name: (identifier)
    (property
      name: (identifier)
      value: (property_value
        (string)))))
